operations/kubernetes/overlays/dev/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: dashboard-frontend-config
spec:
  ingressClassName: nginx
  tls:
    - secretName: tls-sia-knows-cert
  rules:
    - host: dashboard-dev.siaknows.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: dashboard-service
              port:
                number: 80
